# residency-rotation-scheduler

./: .gitignore  .replit  CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  constraints.md  package.json  pyproject.toml  replit.md
client/: package-lock.json  package.json  vite.config.ts
client/src/api/: api.tsx
client/src/components/: CohortStatistics.tsx  PostingBalancingDeviationSelector.tsx  ResidentTimetable.tsx  SessionManager.tsx  SortableBlockCell.tsx
client/src/lib/: constants.ts  generateSampleCSV.ts
client/src/pages/: DashboardPage.tsx  OverviewPage.tsx
client/src/types/: index.ts
server/: database.py  main.py  models.py  requirements.txt  utils.py
server/services/: posting_allocator.py  postprocess.py  preprocessing.py  validate.py
